fix: Folders in dashboard not showing up

--- a/webui.dev/style.css
+++ b/webui.dev/style.css
@@ -279,6 +279,17 @@ button {
   user-select: none;
 }
 
+button.directory {
+  font-size: .85em;
+  font-weight: normal;
+  flex-grow: 1;
+  width: 100%;
+  z-index: 1;
+  padding: 1em;
+  box-shadow: 0 0 6px 0 #aaa;
+  transition: background-color 1s ease, color .3s ease;
+}
+
 action-button {
   display: flex;
   flex-direction: column;
